Fix overflow in pre blocks

--- a/2023/2023.css
+++ b/2023/2023.css
@@ -242,6 +242,7 @@ pre {
   color: #ffffff;
   font-family: monospace;
   width: 100%;
+  overflow: auto;
 }
 
 .code-listing {
